<resources>
    <string name="app_name">ElletaBro</string>

    <string name="Activation_code">Activation code</string>
    <string name="Add_station">Add a station</string>
    <string name="Bitrate">Bitrate</string>
    <string name="Cancel">Cancel</string>
    <string name="Choose_station">Choose a station</string>
    <string name="Destination">Destination</string>
    <string name="Defaults">Defaults</string>
    <string name="Demo">Demo</string>
    <string name="Done">Done</string>
    <string name="Displayname">Display name</string>
    <string name="Edit">Edit</string>
    <string name="Edit_station">Edit a station</string>
    <string name="Email">Email</string>
    <string name="Format">Format</string>
    <string name="General">General</string>
    <string name="General_">General:</string>
    <string name="Identity_">Identity:</string>
    <string name="Icecast">Icecast</string>
    <string name="Icecast_conf">Icecast configuration:</string>
    <string name="Icecast_host">Server host url:</string>
    <string name="Icecast_port">Server port:</string>
    <string name="Icecast_mountpoint">Mountpoint name:</string>
    <string name="Icecast_user">User:</string>
    <string name="Icecast_password">Password:</string>
    <string name="IN">IN</string>
    <string name="invalid_activation_code_empty">Please input activation code</string>
    <string name="invalid_destination_empty">Please input destination</string>
    <string name="invalid_dynamic_empty">Please input dynamic jitter buffer(ms)</string>
    <string name="invalid_email">Please input valid email</string>
    <string name="invalid_email_empty">Please input email</string>
    <string name="invalid_jitter_empty">Please input jitter buffer(ms)</string>
    <string name="invalid_name_empty">Please input name</string>
    <string name="invalid_organization_empty">Please input organization</string>
    <string name="invalid_password_empty">Please input password</string>
    <string name="invalid_password_length">Password must be at least 6 characters</string>
    <string name="invalid_password">Passwords don\'t match</string>
    <string name="invalid_url_empty">Please input URL</string>
    <string name="jitter_buffer">Jitter buffer(ms)</string>
    <string name="jitter_dynamic">Dynamic jitter buffer(ms)</string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="N0_station">No stations to show.</string>
    <string name="Ok">Ok</string>
    <string name="Options">Options</string>
    <string name="option0">Keep screen on while active</string>
    <string name="option1">Call foward automatically</string>
    <string name="option2">Android audio input preset</string>
    <string name="option3">Xtalk compensation</string>
    <string name="option4">Microphone Fader as Level Control</string>
    <string name="option5">Micorphone Fader lock</string>
    <string name="option6">Mic Mute instead of Cue</string>
    <string name="option7">Button Guard</string>
    <string name="option8">Display network jitter metters</string>
    <string name="Organization">Organization</string>
    <string name="OUT">OUT</string>
    <string name="panel_tick0">15</string>
    <string name="panel_tick1">30</string>
    <string name="panel_tick2">45</string>
    <string name="panel_tick3">60</string>
    <string name="panel_tick4">75</string>
    <string name="panel_tick5">90</string>
    <string name="panel_tick6">105</string>
    <string name="panel_tick7">120</string>
    <string name="Password">Password</string>
    <string name="PasswordConfirm">Confirm password</string>
    <string name="Protocol">Protocol</string>
    <string name="Phonebook_">Phonebook:</string>
    <string name="Register">Register</string>
    <string name="Reload_start">Reload at startup</string>
    <string name="Rtp_port">RTP port</string>
    <string name="Samplerate">Samplerate</string>
    <string name="Server">Server</string>
    <string name="setting1">Add phonebook from the internet</string>
    <string name="setting2">Add phonebook from a file</string>
    <string name="SIP">SIP</string>
    <string name="Sort">Sort</string>
    <string name="Stereo">Stereo</string>
    <string name="talk_back">Talk Back mode(Push to Talk)</string>
    <string name="URL">URL</string>
    <string name="User">User</string>
    <!-- label & dilog -->
    <string name="label_register">Unregistered. Running in demo mode. Each 20 seconds you will hear 1 second of silence.</string>
    <string name="dialog_remove">Removing "%1$s". Are you sure?</string>

    <string-array name="protocol_category">
        <item>RTP</item>
        <!-- <item>SC-RTP</item> -->
        <item>SIP</item>
        <item>SHOUTcast</item>
        <item>Icecast</item>
    </string-array>

    <string-array name="audio_format_category">
        <item>AAC</item>
        <item>AAC-ELD</item>
        <item>AAC-HE</item>
        <item>AAC-HEv2</item>
        <item>AAC-LD</item>
        <item>G711-A</item>
        <item>G711-u</item>
        <item>G722</item>
        <item>Linear 16 bit</item>
        <item>Linear 24 bit</item>
        <item>MP2</item>
        <item>Opus Audio</item>
        <item>Opus Low dealy</item>
        <item>Opus Voice</item>
        <item>ULCC</item>
        <item>ULCC-24</item>
        <item>ULCC-s</item>
    </string-array>

    <string-array name="bitrate_category">
        <item>40000</item>
        <item>48000</item>
        <item>56000</item>
        <item>64000</item>
        <item>80000</item>
        <item>96000</item>
        <item>112000</item>
        <item>128000</item>
        <item>160000</item>
        <item>192000</item>
    </string-array>

    <string-array name="samplerate_category">
        <item>16000</item>
        <item>24000</item>
        <item>32000</item>
        <item>44100</item>
        <item>48000</item>
    </string-array>

    <string-array name="audio_input_category">
        <item>Default</item>
        <item>Camcorder</item>
        <item>Voice recognition</item>
    </string-array>

    <string-array name="indicator_array_in">
        <item>-50</item>
        <item>-40</item>
        <item>-30</item>
        <item>-20</item>
        <item>10</item>
        <item>6</item>
        <item>3</item>
        <item>0</item>
    </string-array>
    <string-array name="indicator_array_left">
        <item>-20</item>
        <item>-15</item>
        <item>-10</item>
        <item>-5</item>
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>
    <string-array name="indicator_array_right">
        <item>20</item>
        <item>15</item>
        <item>10</item>
        <item>5</item>
        <item>0</item>
        <item>-5</item>
        <item>-10</item>
        <item>-15</item>
        <item>-20</item>
    </string-array>

    <string name="register_success">Registration succeeded!</string>
    <string name="register_fail">Registration failed!</string>
    <string name="login_success">Login succeeded!</string>
    <string name="login_fail">Login failed!</string>
    <string name="newchannel_success">New channel added successfully!</string>
    <string name="newchannel_fail">Failed to add new channel!</string>
    <string name="updatechannel_success">Channel updated successfully!</string>
    <string name="updatechannel_fail">Failed to update!</string>
    <string name="deletechannel_success">Channel deleted successfully!</string>
    <string name="deletechannel_fail">Failed to delete!</string>
    <string name="channel_list_error">Failed to load channel list!</string>

    <!--ajax call errors-->
    <string name="aj_need_signin">Oops! Please sign in first.</string>
    <string name="aj_invalid_email">Failed! Invalid email-address.</string>
    <string name="aj_invalid_password">Failed! Invalid password length.</string>
    <string name="aj_invalid_activationcode">Failed! Invalid activation code.</string>
    <string name="aj_invalid_channelid">Failed! Invalid channel id.</string>

    <string name="server_not_found">Server not found!</string>
    <string name="server_error">Internal server error!</string>
    <string name="response_parse_error">Server response parse error!</string>
    
    <string name="station_not_selected">Please select a station!</string>
</resources>
