<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_extra_large"
    android:layout_marginRight="@dimen/margin_extra_large"
    android:minWidth="1000dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_large">

        <Button
            android:id="@+id/btn_setting0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_blue"
            android:padding="@dimen/margin_normal"
            android:text="@string/Choose_station"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_setting1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_btn_blue"
            android:padding="@dimen/margin_normal"
            android:text="@string/setting1"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_setting2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_btn_blue"
            android:padding="@dimen/margin_normal"
            android:text="@string/setting2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_setting3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_btn_blue"
            android:padding="@dimen/margin_normal"
            android:text="@string/Add_station"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_setting4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_btn_blue"
            android:padding="@dimen/margin_normal"
            android:text="@string/Options"
            android:textColor="@android:color/white" />
    </LinearLayout>


</android.support.v7.widget.CardView>