<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="1000dp"
    android:orientation="vertical"
    android:padding="@dimen/margin_large">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/URL"
            android:inputType="textUri" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal">

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_blue"
            android:padding="@dimen/margin_normal"
            android:text="@string/Ok"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_blue"
            android:padding="@dimen/margin_normal"
            android:text="@string/Cancel"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>